--- a/notebook/notebook.tex
+++ b/notebook/notebook.tex
@@ -44,23 +44,23 @@
     \end{center}
 
 \subsection{Tuning A PID}
-    For a PID to properly reach the target it must be tuned. Inadequate tuning can lead to failure to reach the target or aggressive oscillations. We tune a PID by changing tuning parameters, these parameters are called $K_P$ $K_I$ and $K_D$. The first step is to set all tuning parameters to 0. By setting a paramerter to zero we can cut out thier influence for the time being. As in the previous section we will look at the tuning of each term individually.
+    For a PID to properly reach the target it must be tuned. Inadequate tuning can lead to failure to reach the target or aggressive oscillations. We tune a PID by changing tuning parameters, these parameters are called $K_P$ $K_I$ and $K_D$. The first step is to set all tuning parameters to 0. By setting a parameter to zero we can cut out their influence for the time being. As in the previous section we will look at the tuning of each term individually.
 
 \paragraph{Tuning the $K_P$ Term}
-    The first step to tuning a PID is to set the $K_P$ term. The first step to setting $K_P$ is to increses it until we get an overshoot and a settle either on the target or settles into an undershoot. If it settles on the target we are done with tuning and PID should be ready to use. If we settle into an undershoot we must move onto setting the $K_I$ term. If we overshoot or enter oscillations without settling we need to decrese the $K_P$ term.
+    The first step to tuning a PID is to set the $K_P$ term. The first step to setting $K_P$ is to increases it until we get an overshoot and a settle either on the target or settles into an undershoot. If it settles on the target we are done with tuning and PID should be ready to use. If we settle into an undershoot we must move onto setting the $K_I$ term. If we overshoot or enter oscillations without settling we need to decrees the $K_P$ term.
 
 \paragraph{Tuning the $K_I$ Term}
-    The purpose of changing the $K_I$ term is to fix steady state error after the control settles. As a result of the behavior of the $I$ term to increses over time, it can add input to make the final push to the target even after the distance is not great enough for the $P$ term to have an effect. The $K_I$ does not need to be changed in all application. The $K_I$ term should be incresed with caution because incresing it even by small ammounts can introduce instability and overshoot.
+    The purpose of changing the $K_I$ term is to fix steady state error after the control settles. As a result of the behavior of the $I$ term to increases over time, it can add input to make the final push to the target even after the distance is not great enough for the $P$ term to have an effect. The $K_I$ does not need to be changed in all application. The $K_I$ term should be increased with caution because increasing it even by small amounts can introduce instability and overshoot.
 
 \paragraph{Tuning the $K_D$ Term}
-    The purpose of the $K_D$ term is to control oscillations in the system. We should change $K_D$ when the system has small but unacceptable oscillations. If the oscillations are large, it points to error in the $K_P$ term. Changing $K_D$ is often unnecessary in the context of robotics. We should change $K_D$ to refine out small errors when working with more percise systems such as driving and turning. However systems which do not need to be super percise, like the speed of a flywheel, we can forgo tuning this term. Tuning of $K_D$ is a final refinement step to add extra stability or to counteract instability added by tuning $K_I$.
+    The purpose of the $K_D$ term is to control oscillations in the system. We should change $K_D$ when the system has small but unacceptable oscillations. If the oscillations are large, it points to error in the $K_P$ term. Changing $K_D$ is often unnecessary in the context of robotics. We should change $K_D$ to refine out small errors when working with more precise systems such as driving and turning. However systems which do not need to be super precise, like the speed of a flywheel, we can forgo tuning this term. Tuning of $K_D$ is a final refinement step to add extra stability or to counteract instability added by tuning $K_I$.
 
 \newpage
 \subsection{Coding a PID for Robotics}
-    When using a PID for an actual application we can use the information described above to create a foundation, but we also need to add some extra parts to help with the imperfections of the real world. The change that must be made is to tell the program when it is ``Close Enough'' and it can stop. There is also the problem of feeding the input to the application. First we will look at the parts which are simmilar to the PID theory above.
+    When using a PID for an actual application we can use the information described above to create a foundation, but we also need to add some extra parts to help with the imperfections of the real world. The change that must be made is to tell the program when it is ``Close Enough'' and it can stop. There is also the problem of feeding the input to the application. First we will look at the parts which are similar to the PID theory above.
 
-\paragraph{Initalizing Variables and Setting Up}
-    The first step to creating any new code system is to create an object (See the ``Overview of Object Oriented Programming'' to get information on this concept), and create variables we need. For now we will only create variables related to the theory and not the modifactions required for a code implementation. This is all done in the header file (Also see the ``Overview of Programing Concepts'' for more information). So far, our code looks like the following.
+\paragraph{Initializing Variables and Setting Up}
+    The first step to creating any new code system is to create an object (See the ``Overview of Object Oriented Programming'' to get information on this concept), and create variables we need. For now we will only create variables related to the theory and not the modifications required for a code implementation. This is all done in the header file (Also see the ``Overview of Programming Concepts'' for more information). So far, our code looks like the following.
 
     \begin{verbatim}
         in pid.hpp:
@@ -84,14 +84,14 @@
         };
     \end{verbatim}
 
-    Let's break down that chunk of code a piece at a time. The first thing we see is the class declaration and the public keyword. These are explained in depth in the ``Overview of Object Oriented Programing''. For our purposes of explaining PID, they are unimportant. Then we see a list of variables all declared as floating point(decimal) values with double percision(hence the name 'double'). After that we declare 3 functions which we will look at in a moment. First, however, let us analyze the variables.
+    Let's break down that chunk of code a piece at a time. The first thing we see is the class declaration and the public keyword. These are explained in depth in the ``Overview of Object Oriented Programming''. For our purposes of explaining PID, they are unimportant. Then we see a list of variables all declared as floating point(decimal) values with double precision(hence the name 'double'). After that we declare 3 functions which we will look at in a moment. First, however, let us analyze the variables.
 
-   \textbf{Variables.} We can see that we have many famillar variables which are reminicent of the equations in the previous section. We also have a new variable \verb|double lastErr| which will keep track of what the error was during the last cycle of the control loop. If you recall from the section of the $D$ term, having access to the last error is important to the calculation of the term.
+   \textbf{Variables.} We can see that we have many familiar variables which are reminiscent of the equations in the previous section. We also have a new variable \verb|double lastErr| which will keep track of what the error was during the last cycle of the control loop. If you recall from the section of the $D$ term, having access to the last error is important to the calculation of the term.
 
-    \textbf{Functions.} Now we will look at the functions we have declared. The first fucntion \verb|PID_OBJ| is a contructor and is called on the creation of a new PID. It takes three arguments, \verb|kp ki kd|, which should be fammilar from both the section on tuning and our variables above. These arguments are how we will tune our system. The \verb|pidCalc| function does the operations described in section \ref{howPID}. Finnaly the reset function allows us to reset the terms without creating a new PID. This is important between tasks to prevent interference. First we will look at the constructor and reset functions, then we will look at the \verb|pidCalc| function.
+    \textbf{Functions.} Now we will look at the functions we have declared. The first function \verb|PID_OBJ| is a constructor and is called on the creation of a new PID. It takes three arguments, \verb|kp ki kd|, which should be familiar from both the section on tuning and our variables above. These arguments are how we will tune our system. The \verb|pidCalc| function does the operations described in section \ref{howPID}. Finlay the reset function allows us to reset the terms without creating a new PID. This is important between tasks to prevent interference. First we will look at the constructor and reset functions, then we will look at the \verb|pidCalc| function.
 
 \paragraph{Constructor and Reset Functions}
-    The constructor and reset functions serve to initilize the PID before an external control loop. We will first look at the constructor.
+    The constructor and reset functions serve to initialize the PID before an external control loop. We will first look at the constructor.
 
     \textbf{Constructor.} The constructor serves to build a new PID object and set tuning information. The code within the constructor is as follows.
 
@@ -105,7 +105,7 @@
 
     We are simply setting the passed values we saw in the header to internal values in the object which we can access later to do calculations with. This allows us to tune once. However, to use the PID multiple times we need to look at the rest function.
 
-    \textbf{Reset.} The reset function sets the values of the PID to be ready for operation. It is absolutly necessary that this function is called before attempting to use the PID. We write the reset function like so.
+    \textbf{Reset.} The reset function sets the values of the PID to be ready for operation. It is absolutely necessary that this function is called before attempting to use the PID. We write the reset function like so.
 
     \begin{verbatim}
     in pid.cpp:
