--- a/notebook/notebook.tex
+++ b/notebook/notebook.tex
@@ -9,8 +9,8 @@
  \tableofcontents
  \newpage
 
- \section{PIT Controller}
-    A PAD Controller (Proportional–Integral–Derivative Controller) is a control system that brings the system softly to a target, preventing overshoots and making for a more accurate program. PID controllers are used within our program to make more accurate turns and allow fine control over the amount the robot moves.
+ \section{PID Controller Basics}
+    A PID Controller (Proportional–Integral–Derivative Controller) is a control system that brings the system softly to a target, preventing overshoots and making for a more accurate program. PID controllers are used within our program to make more accurate turns and allow fine control over the amount the robot moves.
 
 \subsection{How Does a PID Controller Work?} \label{howPID}
     Each term, $P$ $I$ $D$, each serve a specific role in creating and controlling the input which is used to reach the target. By adding up the values of the terms we get the input. We will analyze the function of each term individually.
@@ -56,10 +56,10 @@
     The purpose of the $K_D$ term is to control oscillations in the system. We should change $K_D$ when the system has small but unacceptable oscillations. If the oscillations are large, it points to error in the $K_P$ term. Changing $K_D$ is often unnecessary in the context of robotics. We should change $K_D$ to refine out small errors when working with more precise systems such as driving and turning. However systems which do not need to be super precise, like the speed of a flywheel, we can forgo tuning this term. Tuning of $K_D$ is a final refinement step to add extra stability or to counteract instability added by tuning $K_I$.
 
 \newpage
-\subsection{Coding a PID for Robotics}
+\section{PID in Code}
     When using a PID for an actual application we can use the information described above to create a foundation, but we also need to add some extra parts to help with the imperfections of the real world. The change that must be made is to tell the program when it is ``Close Enough'' and it can stop. There is also the problem of feeding the input to the application. First we will look at the parts which are similar to the PID theory above.
 
-\paragraph{Initializing Variables and Setting Up}
+\subsection{Initializing Variables and Setting Up}
     The first step to creating any new code system is to create an object (See the ``Overview of Object Oriented Programming'' to get information on this concept), and create variables we need. For now we will only create variables related to the theory and not the modifications required for a code implementation. This is all done in the header file (Also see the ``Overview of Programming Concepts'' for more information). So far, our code looks like the following.
 
     \begin{verbatim}
@@ -90,7 +90,7 @@
 
     \textbf{Functions.} Now we will look at the functions we have declared. The first function \verb|PID_OBJ| is a constructor and is called on the creation of a new PID. It takes three arguments, \verb|kp ki kd|, which should be familiar from both the section on tuning and our variables above. These arguments are how we will tune our system. The \verb|pidCalc| function does the operations described in section \ref{howPID}. Finlay the reset function allows us to reset the terms without creating a new PID. This is important between tasks to prevent interference. First we will look at the constructor and reset functions, then we will look at the \verb|pidCalc| function.
 
-\paragraph{Constructor and Reset Functions}
+\subsection{Constructor and Reset Functions}
     The constructor and reset functions serve to initialize the PID before an external control loop. We will first look at the constructor.
 
     \textbf{Constructor.} The constructor serves to build a new PID object and set tuning information. The code within the constructor is as follows.
@@ -118,7 +118,7 @@
 
     We set each term to zero so the calculation has a clean slate. We set \verb|lastErr| to our target value because before the robot has moved, we can assume that the error(distance to the target) is equal to the target. This code could also be placed in the constructor, but this creates a ``Disposable PID'' which can only be used once. By moving the reset code into it's own function, we can reuse our PID.
 
-\paragraph{pidCalc Function}
+\subsection{pidCalc Function}
 
     The \verb|pidCalc| function is the heart of our PID code. It calculates the P I and D terms and adds them together. Later we will also add code to this function to deal with the inconsistency of the robot. First we will look at calculating our terms. It is worth noting that target and current are passed in from the control outside the function, which will discuss later.
     \begin{verbatim}
@@ -137,7 +137,7 @@
 
     This line instructs the function to add the terms together after multiplying with their tuning information and return the sum as a result. We now have the foundations of a PID. Before we can implement it, we need to add code to deal with the real world.
 
-\paragraph{Dealing With Real World Inaccuracy}
+\subsection{Dealing With Real World Inaccuracy}
     Sadly, the robot is not perfect and is not able to make zero tolerance turns. Our sensors also have some Inaccuracy that makes setting exact values impossible. Due to this fact we need to add code to call close enough when we are within a satisfactory zone. The first step is to add the following variables to our PID object.
 
     \begin{verbatim}
@@ -147,7 +147,6 @@
     \end{verbatim}
 
     Let's look at what each of these variables will do. The \verb|acceptableErr| variable will be set in the constructor and tells the PID how close is close enough. Like the tuning values, this needs to be set on a case by case basis for each application, however as a general rule values closer to zero will have more accurate results but require more precision. Values to close to zero may never settle. The \verb|isSettled| is a true or false value that will tell the control loop that we have settled and to move on. In a drive train context, the motors will be given stop commands after isSettled is set to true. Finally the \verb|acceptableCycles| tracks how many cycles we have been in range for.
-    \pagebreak
 
     We start with checking if we are in an acceptable range.
 
@@ -166,9 +165,12 @@
 
     These lines add one to the acceptableCycles variable (reflecting the fact we just passed the acceptableCycles check) and then checks if we have at least 15 acceptable cycles. If we have reached this target we set is settled to True (represented by 1), otherwise we do nothing. Note that there is nothing special about 15. Any number will work there but larger numbers will be more accurate but take longer to settle.
 
-    By putting these parts together we get code that is ready to handle the imperfection of the real world. Our full pidCalc function is as follows.
+    By putting these parts together we get code that is ready to handle the imperfection of the real world. Our full pidCalc function is as follows. (on next page)
+    \pagebreak
 
     \begin{verbatim}
+        in pid.cpp:
+
         this->p = target - current;
         this->i += this->p;
         this->d = this->p - this->lastErr;
@@ -187,4 +189,71 @@
     \end{verbatim}
 
     To use this function to run a system we need to create a control loop. We will use the autonomous turning code as an example of this.
+
+\subsection{PID Control Loop Example}
+\paragraph{What does the control loop do?}
+    By it's self the PID object is not able to affect the robot in any way. To put our code to work we need to add a control loop. This will take the outputs from the PID and give commands to the robot. We will show an example using autonomous turning code as this is a common use for PID.
+
+\paragraph{Turning Example}
+
+    We should first establish how we will track our current value. On the robot we have a sensor called the inertial sensor. This sensor tracks a number of values but the one we care about is rotation. Rotation tracks the how far we have rotated left or right in an angle. We will pass a value \verb|deg| to our turn function which will instruct the robot on how far it is to turn.
+
+    Our first step is to calculate our starting value and reset the PID. We calculate our target with the following formula.
+    $$ T = d + m $$
+    \begin{center}
+     \em{Where T is target, d is the value deg that we pass, and m is the measured current value}
+    \end{center}
+
+    After this we reset our PID, passing the target to the reset function. Our first two lines look as follows.
+
+    \begin{verbatim}
+        double target = deg + this->readInertialDeg();
+        this->turPID.reset(target);
+    \end{verbatim}
+
+    Note that turPID is the PID that is set up with the tuning information regarding turning. Structure of the autonomous program will be discussed later.
+
+    Next we create a loop which will calculate the current PID value and feed it to the motors. The code for that looks as follows.
+
+    \begin{verbatim}
+        while(true) {
+            double calcVal = this->turPID.pidCalc(target, this->readInertialDeg());
+
+            this->driveRight(calcVal);
+            this->driveLeft(-calcVal);
+    \end{verbatim}
+
+    Note that the value we feed to the left motors is the opposite of that fed to the right motors. This is done so the robot will actually turn as opposed to going straight. We pass the value from the inertial sensor as the current mesured value to the pidCalc function of the turPID (turn PID).
+
+    Next we check if the PID has settled with a quick if statement, which is the following.
+    \begin{verbatim}
+     if(this->turPID.isSettled)
+        {
+            this->brake();
+            return;
+        }
+    \end{verbatim}
+
+    If the PID has settled the program tells the robot to brake and stop turning. After braking the loop ends and the robot has turned to the correct positon. The full turn function is complete below.
+
+    \begin{verbatim}
+        double target = deg + this->readInertialDeg();
+        this->turPID.reset(target);
+        while(true)
+        {
+            double calcVal = this->turPID.pidCalc(target, this->readInertialDeg());
+
+            this->driveRight(calcVal);
+            this->driveLeft(-calcVal);
+            if(this->turPID.isSettled)
+            {
+                this->brake();
+                return;
+            }
+            delay(10);
+        }
+    \end{verbatim}
+
+
+
 \end{document}
