--- a/notebook/notebook.tex
+++ b/notebook/notebook.tex
@@ -1,8 +1,12 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+
+\usepackage{graphicx}
 
 \title{47510W Phoenix Horizon Programming}
 \date{2024-2025}
 \author{}
+
+\graphicspath { {./figures} }
 
 \begin{document}
  \maketitle
@@ -132,7 +136,8 @@
 
     After this we have a line to put the parts together.
     \begin{verbatim}
-     return (this->p*this->kp)+(this->i*this->ki)+(this->d*this->kd);
+     return (this->p*this->kp)
+        +(this->i*this->ki)+(this->d*this->kd);
     \end{verbatim}
 
     This line instructs the function to add the terms together after multiplying with their tuning information and return the sum as a result. We now have the foundations of a PID. Before we can implement it, we need to add code to deal with the real world.
@@ -166,7 +171,6 @@
     These lines add one to the acceptableCycles variable (reflecting the fact we just passed the acceptableCycles check) and then checks if we have at least 15 acceptable cycles. If we have reached this target we set is settled to True (represented by 1), otherwise we do nothing. Note that there is nothing special about 15. Any number will work there but larger numbers will be more accurate but take longer to settle.
 
     By putting these parts together we get code that is ready to handle the imperfection of the real world. Our full pidCalc function is as follows. (on next page)
-    \pagebreak
 
     \begin{verbatim}
         in pid.cpp:
@@ -185,7 +189,8 @@
         } else {
             acceptableCycles = 0;
         }
-        return (this->p*this->kp)+(this->i*this->ki)+(this->d*this->kd);
+        return (this->p*this->kp)
+            +(this->i*this->ki)+(this->d*this->kd);
     \end{verbatim}
 
     To use this function to run a system we need to create a control loop. We will use the autonomous turning code as an example of this.
@@ -217,7 +222,8 @@
 
     \begin{verbatim}
         while(true) {
-            double calcVal = this->turPID.pidCalc(target, this->readInertialDeg());
+            double calcVal = this->turPID.pidCalc(target,
+                this->readInertialDeg());
 
             this->driveRight(calcVal);
             this->driveLeft(-calcVal);
@@ -234,26 +240,18 @@
         }
     \end{verbatim}
 
-    If the PID has settled the program tells the robot to brake and stop turning. After braking the loop ends and the robot has turned to the correct positon. The full turn function is complete below.
-
-    \begin{verbatim}
-        double target = deg + this->readInertialDeg();
-        this->turPID.reset(target);
-        while(true)
-        {
-            double calcVal = this->turPID.pidCalc(target, this->readInertialDeg());
-
-            this->driveRight(calcVal);
-            this->driveLeft(-calcVal);
-            if(this->turPID.isSettled)
-            {
-                this->brake();
-                return;
-            }
-            delay(10);
-        }
-    \end{verbatim}
+    If the PID has settled the program tells the robot to brake and stop turning. After braking the loop ends and the robot has turned to the correct positon. This concludes the section on the PID and we will now move onto odometry.
 
 
+\pagebreak
+\section{Basics of Odometry}
+\subsection{What is Odometry}
+    Odomotry allows the robot to keep track of where it is on the field. In this imperfection, the robot keeps track of whre it is relative to it's starting positon. Odometry works by tracking the rotation of specific wheels and the heading of the robot.
+    %should add odom wheel image here later :)
+
+    By using the data from the wheels and sensors we are able to
+    With odomotry we are able to tell the robot to go to a point as opposed to manually setting turns and movement. This allows for more percise programing that can remove errors in real applications.
+
+\subsection{Designing Odometry}
 
 \end{document}
